# GroupBy

./: CMakeLists.txt  GenerateProjectFiles.bat
Src/: GroupBy.cpp  GroupBy.h  MainWindow.cpp  MainWindow.h  Pch.h
