CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(GroupBy)

ADD_DEFINITIONS(-DWXUSINGDLL)

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../Lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../Lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../Bin)

FILE(GLOB HEADER_FILES 
	${PROJECT_SOURCE_DIR}/Src/*.h
)

FOREACH(SRC ${HEADER_FILES})
	SOURCE_GROUP("Header Files" FILES "${SRC}")

ENDFOREACH()

FILE(GLOB SOURCE_FILES 
	${PROJECT_SOURCE_DIR}/Src/*.cpp
)

FOREACH(SRC ${SOURCE_FILES})
	SOURCE_GROUP("Source Files" FILES "${SRC}")

	SET_SOURCE_FILES_PROPERTIES(${SRC} PROPERTIES COMPILE_FLAGS "/YuPch.h")
ENDFOREACH()

SET_SOURCE_FILES_PROPERTIES(${PROJECT_SOURCE_DIR}/Src/Pch.cpp PROPERTIES COMPILE_FLAGS "/YcPch.h")

INCLUDE_DIRECTORIES(
	${PROJECT_SOURCE_DIR}/Include
)

ADD_EXECUTABLE(${PROJECT_NAME} WIN32
	${HEADER_FILES}
	${SOURCE_FILES}
)
